Fix overflow button messing up toolbar appearance
(integrated from komodo (trunk) change 76626 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@11571 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/toolbars.less
+++ b/src/chrome/komodo/skin/plat/shared/toolbars.less
@@ -138,6 +138,19 @@
     }
 }
 
+#main-toolboxrow .overflow-toolbarbutton
+{
+    -moz-appearance: none;
+    margin: 0;
+    padding: 0;
+    margin-top: -10px;
+    
+    menuitem label
+    {
+        color: inherit;
+    }
+}
+
 #main-toolboxrow toolbar.custom-toolbar:not(.enable-svg-filters) toolbarbutton image
 {
     filter: none;
